Fix typo: your are/you are

--- a/standalone.html
+++ b/standalone.html
@@ -86,7 +86,7 @@
             This tool should only be used for experiments.
             </p>
             <p class="h2">
-            There are no alternative implementations, meaning your are
+            There are no alternative implementations, meaning you are
             <em>totally dependent on this tool</em> if you use it.
             That is a dangerous situation to be in.
             </p>
