Show version in top right of page

--- a/src/index.html
+++ b/src/index.html
@@ -69,11 +69,17 @@
             textarea.parts {
                 height: 300px;
             }
+            .version {
+                position: absolute;
+                top: 5px;
+                right: 5px;
+            }
         </style>
     </head>
     <body>
         <div class="container">
 
+            <p class="version">Version: Prototype-1</p>
             <div class="text-center text-extreme-danger">
             <p class="h1">
             <strong>This is a prototype.</strong>
