Add changelog below warning text

--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,41 @@
                 </a>
             </p>
             </div>
+            <div>
+            <h3>
+            Changelog
+            </h3>
+            <p>
+            Prototype-1
+            </p>
+            <ul>
+                <li>
+                    <strong>Breaking Change</strong>
+                    Change bits for shamir shares from 12 to 11.
+                    See
+                    <a href="https://github.com/iancoleman/shamir39/issues/2">
+                        https://github.com/iancoleman/shamir39/issues/2
+                    </a>
+                </li>
+                <li>
+                    Change version word from shamir39 to shamir39-p1
+                </li>
+                <li>
+                    Add version text
+                </li>
+            </ul>
+            <p>
+            Initial Unversioned Release
+            </p>
+            <ul>
+                <li>
+                    Available on
+                    <a href="https://web.archive.org/web/20170911001146/iancoleman.github.io/shamir39">
+                        archive.org
+                    </a>
+                </li>
+            </ul>
+            </div>
 
             <hr>
 
