--- a/standalone.html
+++ b/standalone.html
@@ -107,7 +107,9 @@
             Changelog
             </h3>
             <p>
-            Prototype-1
+            <strong>Prototype-1</strong>
+            -
+            for shares starting with shamir39-p1
             </p>
             <ul>
                 <li>
@@ -124,16 +126,36 @@
                 <li>
                     Add version text
                 </li>
+                <li>
+                    View in the browser using
+                    <a href="https://web.archive.org/web/20171003054223/iancoleman.github.io/shamir39">
+                        archive.org/iancoleman.github.io/shamir39
+                    </a>
+                    <br>
+                    or download from
+                    <a href="https://github.com/iancoleman/shamir39/raw/b12d58d6d71a4db71ac9796e7d82c0a7691dd973/standalone.html">
+                        github.com/iancoleman/shamir39
+                    </a>
+                    (right-click save)
+                </li>
             </ul>
             <p>
-            Initial Unversioned Release
+            <strong>Initial Unversioned Release</strong>
+            -
+            for shares starting with shamir39
             </p>
             <ul>
                 <li>
-                    Available on
+                    View in the browser using
                     <a href="https://web.archive.org/web/20170911001146/iancoleman.github.io/shamir39">
-                        archive.org
+                        archive.org/iancoleman.github.io/shamir39
                     </a>
+                    <br>
+                    or download from
+                    <a href="https://github.com/iancoleman/shamir39/raw/ece6bde547ac2587067f8b04060b612441a625e5/standalone.html">
+                        github.com/iancoleman/shamir39
+                    </a>
+                    (right-click save)
                 </li>
             </ul>
             </div>
