--- a/src/index.html
+++ b/src/index.html
@@ -190,12 +190,13 @@
                             <div class="col-sm-10 languages">
                                 <div class="form-control no-border">
                                     <a href="#english">English</a>
-                                    <a href="#japanese" title="Japanese">日本語</a>
-                                    <a href="#spanish"  title="Spanish">Español</a>
+                                    <a href="#spanish" title="Spanish">Español</a>
+                                    <a href="#french" title="French">Français</a>
+                                    <a href="#italian" title="Italian">Italiano</a>
+                                    <a href="#japanese"title="Japanese">日本語</a>
                                     <a href="#chinese_simplified"  title="Chinese (Simplified)">中文(简体)</a>
                                     <a href="#chinese_traditional"  title="Chinese (Traditional)">中文(繁體)</a>
-                                    <a href="#french"  title="French">Français</a>
-                                    <a href="#italian"  title="Italian">Italiano</a>
+                                    <a href="#korean" title="Italian">한국어</a>
                                 </div>
                             </div>
                         </div>
@@ -377,6 +378,7 @@
         <script src="js/unorm.js"></script>
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
+        <script src="bootstrap.bundle.min.js"></script>
         <script src="js/levenshtein.js"></script>
         <script src="js/shamir39.js"></script>
         <script src="js/sjcl-bip39.js"></script>
@@ -387,6 +389,7 @@
         <script src="js/wordlist_chinese_traditional.js"></script>
         <script src="js/wordlist_french.js"></script>
         <script src="js/wordlist_italian.js"></script>
+        <script src="js/wordlist_korean.js"></script>
         <script src="js/jsbip39.js"></script>
         <script src="js/biginteger.js"></script>
         <script src="js/index.js"></script>
